--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ body {
     text-align: center;
     font-family: verdana;
 }
+.pbtn {
+    background-color: rgb(250, 250, 250);
+    transition: background-color 0.2s ease-in-out;
+}
+.pbtn:hover {
+    background-color: rgb(0, 204, 255);
+}
